--- a/.github/workflows/build-dotnet6.yml
+++ b/.github/workflows/build-dotnet6.yml
@@ -2,13 +2,10 @@
 
 name: BulletSim binaries
 
-env:
-  branch: dotnet6
-
 on:
   push:
     branches: 
-      - ${{ branch }}
+      - dotnet6
 
 jobs:
   build:
@@ -27,7 +24,7 @@ jobs:
       - name: git checkout
         uses: actions/checkout@v3
         with:
-          ref: ${{ branch }}
+          ref: dotnet6
           path: bulletsim
 
       - name: download Bullet
