Workflow: update runs-on parameter to use matrix.include

--- a/.github/workflows/build-dotnet6.yml
+++ b/.github/workflows/build-dotnet6.yml
@@ -19,7 +19,7 @@ jobs:
           - os: windows-latest
             codecov: false
 
-    runs-on: ${{ matrix.options.os }}
+    runs-on: ${{ matrix.include.os }}
 
     steps:
       - name: git checkout
