--- a/.github/workflows/build-dotnet6.yml
+++ b/.github/workflows/build-dotnet6.yml
@@ -11,7 +11,12 @@ jobs:
   build:
     strategy:
       matrix: 
-        - os: [ ubuntu-latest, macos-latest, windows-latest ]
+        # os: [ ubuntu-latest, macos-latest, windows-latest ]
+        include:
+          - os: ubuntu-20.04
+            ext: so
+          - os: macos-12
+            ext: dylib
 
     runs-on: ${{ matrix.os }}
 
@@ -22,10 +27,20 @@ jobs:
           ref: dotnet6
           path: bulletsim
 
-      - name: download Bullet
+      - name: checkout Bullet
+        uses: actions/checkout@v3
+        with:
+          repository: bulletphysics/bullet3
+          path: bulletsim
+          clean: false
+#        run: |
+#          cd bulletsim
+#          git clone --depth=1 https://github.com/bulletphysics/bullet3.git
+
+      - name: apply patches to Bullet
         run: |
-          cd bulletsim
-          git clone https://github.com/bulletphysics/bullet3.git
+          cd bulletsim/bullet3
+          for file in ../00*.patch ; do cat $file | patch -p1 ; done
 
       - name: build Bullet physics engine
         run: |
@@ -36,6 +51,13 @@ jobs:
         run: |
           cd bulletsim
           ./buildBulletSim.sh
+
+      - name: Upload built image
+        uses: actions/upload-artifact@v3
+        with:
+          name: binary-${{ matrix.os }}
+          path: bulletsim/*.${{ matrix.ext }}
+          if-no-files-found: error
 
 # vim: tabstop=2 shiftwidth=2 autoindent expandtab
 
