workflow: restore installation of msbuild and add buildBulletSim.ps1 and use same.

--- a/.github/workflows/build-win-dotnet6.yml
+++ b/.github/workflows/build-win-dotnet6.yml
@@ -16,8 +16,7 @@ jobs:
             osclass: win
             name: "BulletSim binary build for Windows"
             build_type: Release
-            scriptext: bat
-            scriptext2: ps1
+            scriptext: ps1
 
     runs-on: ${{ matrix.os }}
     name: ${{ matrix.name }}
@@ -74,10 +73,13 @@ jobs:
         with:
           dotnet-version: '6.0.x'
 
+      - name: Setup MSVC
+        uses: microsoft/setup-msbuild@v1.3.1
+
       - name: build Bullet build files
         run: |
           cd bulletsim
-          ./buildBulletCMake.${{ matrix.scriptext2 }}
+          ./buildBulletCMake.${{ matrix.scriptext }}
 
       - name: build BulletSim
         run: |
